--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="root" ng-strict-di>
   <head>
-    <base href="/">
+    <base href="/app">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
